update not to use Azure Storage SDK